cmake_minimum_required(VERSION 3.21)
project(C)

set(CMAKE_CXX_STANDARD 20)

add_executable(C main.cpp Circle.cpp Circle.h CCC/CCC_1999/S4.cpp CCC/CCC_1999/S4.h CCC/CCC_2016/S3.cpp CCC/CCC_2016/S3.h Seneca/W7/Covid.cpp Seneca/W7/Covid.h CCC/CCC_2015/S3.cpp CCC/CCC_2015/S3.h CCC/CCC_2011/S1.cpp CCC/CCC_2011/S1.h CCC/CCC_2011/S2.cpp CCC/CCC_2011/S2.h CCC/CCC_2010/S1.cpp CCC/CCC_2010/S1.h CCC/CCC_2015/S1.cpp CCC/CCC_2015/S1.h CCC/CCC_2015/S2.cpp CCC/CCC_2015/S2.h Seneca/W8/EmpProfile.h Seneca/W8/GeneratingList.h Seneca/W8/WritingRecord.cpp Seneca/W8/WritingRecord.h)
